Update and rename 6.html to tetoris.html

--- a/tetoris.html
+++ b/tetoris.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8" />
-  <title>本家風テトリス</title>
+  <title>テトリス</title>
   <style>
     body {
       background: #111;
@@ -31,8 +31,8 @@
   </style>
 </head>
 <body>
-  <h1>本家風テトリス</h1>
-  <p>Escで設定 / 矢印・WASD・QE対応 / ネクスト / T-SPIN対応</p>
+  <h1>テトリス</h1>
+  <p>Escで設定</p>
   <canvas width="240" height="400" id="tetris"></canvas>
   <canvas width="80" height="80" id="next" style="background:#111; margin-top:10px; border:2px solid white;"></canvas>
   <p>Score: <span id="score">0</span> | Level: <span id="level">1</span> | Lines: <span id="lines">0</span></p>
